syntax = "proto3";

package order;

import "proto/common/types.proto";
import "proto/user/user.proto";

option java_package = "com.example.order";
option java_outer_classname = "OrderProto";
option go_package = "github.com/example/bazel-example/proto/order";

// Order entity
message Order {
  string id = 1;
  string user_id = 2;
  repeated OrderItem items = 3;
  common.Money total_amount = 4;
  OrderStatus status = 5;
  common.Address shipping_address = 6;
  common.Timestamp created_at = 7;
  common.Timestamp updated_at = 8;
}

// Order item
message OrderItem {
  string product_id = 1;
  string product_name = 2;
  int32 quantity = 3;
  common.Money unit_price = 4;
  common.Money total_price = 5;
}

// Order status enum
enum OrderStatus {
  ORDER_STATUS_UNSPECIFIED = 0;
  ORDER_STATUS_PENDING = 1;
  ORDER_STATUS_CONFIRMED = 2;
  ORDER_STATUS_PROCESSING = 3;
  ORDER_STATUS_SHIPPED = 4;
  ORDER_STATUS_DELIVERED = 5;
  ORDER_STATUS_CANCELLED = 6;
  ORDER_STATUS_REFUNDED = 7;
}

// Create order request
message CreateOrderRequest {
  string user_id = 1;
  repeated OrderItem items = 2;
  common.Address shipping_address = 3;
}
