package client

import (
	"context"
	"fmt"
	"log"
	"time"

	"google.golang.org/grpc"
	"google.golang.org/grpc/credentials/insecure"
)

// OrderClient wraps the gRPC client for order service
type OrderClient struct {
	conn   *grpc.ClientConn
	// client order.OrderServiceClient  // TODO: Add when proto is properly generated
}

// NewOrderClient creates a new order service client
func NewOrderClient(address string) (*OrderClient, error) {
	conn, err := grpc.Dial(address, grpc.WithTransportCredentials(insecure.NewCredentials()))
	if err != nil {
		return nil, fmt.Errorf("failed to connect to order service: %w", err)
	}

	return &OrderClient{
		conn: conn,
		// client: order.NewOrderServiceClient(conn),  // TODO: Add when proto is properly generated
	}, nil
}

// Close closes the gRPC connection
func (c *OrderClient) Close() error {
	return c.conn.Close()
}

// CreateOrder creates a new order
func (c *OrderClient) CreateOrder(ctx context.Context, req interface{}) (interface{}, error) {
	log.Printf("Creating order via gRPC")
	
	// TODO: Implement actual gRPC call when proto is properly generated
	// ctx, cancel := context.WithTimeout(ctx, 10*time.Second)
	// defer cancel()
	// 
	// return c.client.CreateOrder(ctx, req)
	
	// Mock response for now
	time.Sleep(150 * time.Millisecond) // Simulate network call
	return map[string]interface{}{
		"id":      "order-123",
		"user_id": "user-123",
		"status":  "pending",
		"total":   99.99,
	}, nil
}

// GetOrder retrieves an order by ID
func (c *OrderClient) GetOrder(ctx context.Context, orderID string) (interface{}, error) {
	log.Printf("Getting order %s via gRPC", orderID)
	
	// TODO: Implement actual gRPC call when proto is properly generated
	// ctx, cancel := context.WithTimeout(ctx, 10*time.Second)
	// defer cancel()
	// 
	// req := &order.GetOrderRequest{Id: orderID}
	// return c.client.GetOrder(ctx, req)
	
	// Mock response for now
	time.Sleep(75 * time.Millisecond) // Simulate network call
	return map[string]interface{}{
		"id":      orderID,
		"user_id": "user-123",
		"status":  "confirmed",
		"total":   99.99,
		"items": []map[string]interface{}{
			{
				"product_id":   "prod-1",
				"product_name": "Test Product",
				"quantity":     2,
				"unit_price":   49.99,
			},
		},
	}, nil
}

// UpdateOrderStatus updates an order's status
func (c *OrderClient) UpdateOrderStatus(ctx context.Context, orderID, status string) (interface{}, error) {
	log.Printf("Updating order %s status to %s via gRPC", orderID, status)
	
	// TODO: Implement actual gRPC call when proto is properly generated
	// ctx, cancel := context.WithTimeout(ctx, 10*time.Second)
	// defer cancel()
	// 
	// req := &order.UpdateOrderStatusRequest{
	//     Id:     orderID,
	//     Status: order.OrderStatus(status),
	// }
	// return c.client.UpdateOrderStatus(ctx, req)
	
	// Mock response for now
	time.Sleep(100 * time.Millisecond) // Simulate network call
	return map[string]interface{}{
		"id":     orderID,
		"status": status,
	}, nil
}

// CancelOrder cancels an order
func (c *OrderClient) CancelOrder(ctx context.Context, orderID, reason string) (bool, error) {
	log.Printf("Cancelling order %s via gRPC", orderID)
	
	// TODO: Implement actual gRPC call when proto is properly generated
	// ctx, cancel := context.WithTimeout(ctx, 10*time.Second)
	// defer cancel()
	// 
	// req := &order.CancelOrderRequest{
	//     Id:     orderID,
	//     Reason: reason,
	// }
	// resp, err := c.client.CancelOrder(ctx, req)
	// if err != nil {
	//     return false, err
	// }
	// return resp.Success, nil
	
	// Mock response for now
	time.Sleep(100 * time.Millisecond) // Simulate network call
	return true, nil
}

// ListUserOrders lists orders for a specific user
func (c *OrderClient) ListUserOrders(ctx context.Context, userID string, page, pageSize int) (interface{}, error) {
	log.Printf("Listing orders for user %s via gRPC", userID)
	
	// TODO: Implement actual gRPC call when proto is properly generated
	// ctx, cancel := context.WithTimeout(ctx, 10*time.Second)
	// defer cancel()
	// 
	// req := &order.ListUserOrdersRequest{
	//     UserId: userID,
	//     PageRequest: &common.PageRequest{
	//         Page:     int32(page),
	//         PageSize: int32(pageSize),
	//     },
	// }
	// return c.client.ListUserOrders(ctx, req)
	
	// Mock response for now
	time.Sleep(120 * time.Millisecond) // Simulate network call
	return map[string]interface{}{
		"orders": []map[string]interface{}{
			{
				"id":      "order-123",
				"user_id": userID,
				"status":  "confirmed",
				"total":   99.99,
			},
			{
				"id":      "order-124",
				"user_id": userID,
				"status":  "shipped",
				"total":   149.99,
			},
		},
		"page": map[string]interface{}{
			"page":        page,
			"page_size":   pageSize,
			"total_items": 2,
			"total_pages": 1,
		},
	}, nil
}
